# byos_rs

./: .env  Cargo.toml  README.md
.github/workflows/: CI.yml  docker-publish.yml
data/: test.yaml
docker/: DockerFile  Dockerfile
src/: main.rs
src/api/: display.rs  init.rs  log.rs  media.rs  mod.rs  screen.rs  setup.rs
src/api/interceptors/: device_id.rs  device_infos.rs  mod.rs  token.rs
src/config/: match_plugin.rs  mod.rs  parse.rs  types.rs
src/plugins/: mod.rs  plugin.rs  utils.rs
src/plugins/github_commit_graph/: commit_grayscale_filter.rs  github_commit_graph.liquid  mod.rs  plugin.rs  utils.rs
src/plugins/static_image/: plugin.rs
src/renderer/: bmp_renderer.rs  mod.rs  render.rs
